# data-representation-and-operation

./: .gitattributes.swp  README.md
numericalconversor/: CMakeLists.txt  README.md  methods.cpp  methods.hpp  nc  numericalconversor.cpp
numericalconversor/methods_/: methods.cpp  methods.hpp
numericalconversor/nc.dSYM/Contents/Resources/DWARF/: nc
realnumber/: CMakeLists.txt  README.md  real_numberConfig.h.in  realnumber.cpp  rn  run.sh
realnumber/methods_/: CMakeLists.txt  methods.cpp  methods.hpp
realnumber/rn.dSYM/Contents/Resources/DWARF/: rn
signedint/: README.md  si  signed.cpp
signedint/si.dSYM/Contents/Resources/DWARF/: si
unsignedint/: README.md  ui  unsint.cpp
unsignedint/ui.dSYM/Contents/Resources/DWARF/: ui
